@@ -2,6 +2,7 @@ Cacti CHANGELOG
 
 1.1.35
 -issue#993: Realtime not working on remote pollers for certain data query
+-issue#1306: Fix issue #1306 where multi-value args are not parsing correctly
 
 1.1.34
 -issue#1040: PHP version 7.2 - ERROR PHP WARNING: sizeof()
